--- a/EEEeee/Views/HeroPage.xaml
+++ b/EEEeee/Views/HeroPage.xaml
@@ -43,7 +43,7 @@
             <TextBlock Text="Оружие:" FontSize="16" Foreground="White" FontWeight="Bold"/>
             <TextBlock Text="{Binding SelectedHero.Weapon.Name}" FontSize="14" Margin="0,0,0,10" Foreground="White"/>
 
-            <TextBlock Text="Выбор комнаты:" FontSize="16" Foreground="White" FontWeight="Bold"/>
+            <TextBlock Text="Выбор номера комнаты:" FontSize="16" Foreground="White" FontWeight="Bold"/>
             <ComboBox     
                           ItemsSource="{Binding Rooms}" 
                           SelectedItem="{Binding SelectedRoom}"
